- Tidied code - Spruced up Main Page - Pop up info background - Rewards - Swipe   -) Might remove - Swapped cycle and sit up - "Miles" and others - "Run" to "ran" and others

--- a/app/src/main/res/layout/activity_pop_up_info.xml
+++ b/app/src/main/res/layout/activity_pop_up_info.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#191919"
+    android:background="@drawable/underwater"
     tools:context="com.example.rossg_000.fyp_v3.PopUpInfo">
 
     <TextView
