--- a/app/src/main/res/layout/activity_rewards.xml
+++ b/app/src/main/res/layout/activity_rewards.xml
@@ -136,7 +136,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:visibility="visible"
-                app:srcCompat="@drawable/circle" />
+                app:srcCompat="@drawable/trident3" />
 
         </FrameLayout>
     </LinearLayout>
