--- a/app/src/main/res/layout/activity_rewards.xml
+++ b/app/src/main/res/layout/activity_rewards.xml
@@ -2,144 +2,172 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/app_background_image"
     tools:context="com.example.rossg_000.fyp_v3.Rewards">
 
 
-    <LinearLayout
-        android:id="@+id/linearLayout5"
-        android:layout_width="wrap_content"
-
-        android:layout_height="wrap_content"
+    <android.support.v7.widget.CardView
+        android:id="@+id/RewardCardView1"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_gravity="top"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        app:cardElevation="0dp"
+        app:cardMaxElevation="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        card_view:cardCornerRadius="1dp">
+
+        <ImageView
+            android:src="@drawable/cardviewbackground1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            />
 
         <LinearLayout
+            android:id="@+id/linearLayout5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_gravity="center"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.08"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.61">
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="@id/RewardCardView1"
+                app:layout_constraintEnd_toEndOf="@id/RewardCardView1"
+                app:layout_constraintHorizontal_bias="0.08"
+                app:layout_constraintStart_toStartOf="@id/RewardCardView1"
+                app:layout_constraintTop_toTopOf="@id/RewardCardView1"
+                app:layout_constraintVertical_bias="0.61">
+
+                <FrameLayout
+                    android:id="@+id/TaskFrameLayout"
+                    android:layout_width="200dp"
+                    android:layout_height="35dp">
+
+                    <ProgressBar
+                        android:id="@+id/TaskProgressBar"
+                        style="@android:style/Widget.ProgressBar.Horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:progressTint="@android:color/holo_red_dark" />
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            android:text="Task: progress to next reward"
+                            android:textSize="10dp" />
+                    </RelativeLayout>
+                </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/ExerciseFrameLayout"
+                    android:layout_width="200dp"
+                    android:layout_height="35dp"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintTop_toBottomOf="@+id/TaskFrameLayout">
+
+
+                    <ProgressBar
+                        android:id="@+id/ExerciseProgressBar"
+                        style="@android:style/Widget.ProgressBar.Horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:progressTint="@android:color/holo_red_dark" />
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            android:text="Exercise: progress to next reward"
+                            android:textSize="10dp" />
+                    </RelativeLayout>
+                </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/MeditationFrameLayout"
+                    android:layout_width="200dp"
+                    android:layout_height="35dp"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintTop_toBottomOf="@+id/ExerciseFrameLayout">
+
+                    <ProgressBar
+                        android:id="@+id/MeditationProgressBar"
+                        style="@android:style/Widget.ProgressBar.Horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:progressTint="@android:color/holo_red_dark" />
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            android:text="Meditation: progress to next reward"
+                            android:textSize="10dp" />
+                    </RelativeLayout>
+                </FrameLayout>
+            </LinearLayout>
 
             <FrameLayout
-                android:id="@+id/TaskFrameLayout"
-                android:layout_width="200dp"
-                android:layout_height="35dp">
+                android:id="@+id/ImageFrameLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-                <ProgressBar
-                    android:id="@+id/TaskProgressBar"
-                    style="@android:style/Widget.ProgressBar.Horizontal"
+                <ImageView
+                    android:id="@+id/Trophy"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:progressTint="@android:color/holo_red_dark" />
+                    android:visibility="invisible"
+                    app:srcCompat="@drawable/trophy" />
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
-                        android:text="Task: progress to next reward"
-                        android:textSize="10dp" />
-                </RelativeLayout>
-            </FrameLayout>
-
-            <FrameLayout
-                android:id="@+id/ExerciseFrameLayout"
-                android:layout_width="200dp"
-                android:layout_height="35dp"
-                android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@+id/TaskFrameLayout">
-
-
-                <ProgressBar
-                    android:id="@+id/ExerciseProgressBar"
-                    style="@android:style/Widget.ProgressBar.Horizontal"
+                <ImageView
+                    android:id="@+id/NotTrophy"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:progressTint="@android:color/holo_red_dark" />
+                    android:visibility="visible"
+                    app:srcCompat="@drawable/trident3" />
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
-                        android:text="Exercise: progress to next reward"
-                        android:textSize="10dp" />
-                </RelativeLayout>
-            </FrameLayout>
-
-            <FrameLayout
-                android:id="@+id/MeditationFrameLayout"
-                android:layout_width="200dp"
-                android:layout_height="35dp"
-                android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@+id/ExerciseFrameLayout">
-
-                <ProgressBar
-                    android:id="@+id/MeditationProgressBar"
-                    style="@android:style/Widget.ProgressBar.Horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:progressTint="@android:color/holo_red_dark" />
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
-                        android:text="Meditation: progress to next reward"
-                        android:textSize="10dp" />
-                </RelativeLayout>
             </FrameLayout>
         </LinearLayout>
-
-        <FrameLayout
-            android:id="@+id/ImageFrameLayout"
-            android:layout_width="130dp"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/Trophy"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="invisible"
-                app:srcCompat="@drawable/trophy" />
-
-            <ImageView
-                android:id="@+id/NotTrophy"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="visible"
-                app:srcCompat="@drawable/trident3" />
-
-        </FrameLayout>
-    </LinearLayout>
+    </android.support.v7.widget.CardView>
 
 
     <ListView
@@ -153,7 +181,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
+        app:layout_constraintTop_toBottomOf="@+id/RewardCardView1" />
 
 
 </android.support.constraint.ConstraintLayout>
