--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,23 @@
     <android.support.v7.widget.CardView
         android:id="@+id/MainCardView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_height="80dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:backgroundTint="#8C131e72">
+        android:layout_marginTop="8dp"
+        android:backgroundTint="#8C131e72"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        card_view:cardCornerRadius="1dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.4"
+            android:scaleType="fitXY"
+            android:src="@drawable/cardviewbackground1"/>
+
 
         <LinearLayout
             android:id="@+id/TitleLinearLayout"
@@ -43,9 +55,8 @@
                 android:textColor="@android:color/black"
                 android:textSize="22dp" />
         </LinearLayout>
-
-
     </android.support.v7.widget.CardView>
+
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -56,22 +67,29 @@
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@+id/MainCardView">
 
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="115dp"
             android:gravity="center"
             android:orientation="horizontal">
 
             <android.support.v7.widget.CardView
                 android:id="@+id/ExerciseCardView"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="100dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="50dp"
                 android:backgroundTint="#4D131e72"
                 app:cardElevation="0dp"
                 app:cardMaxElevation="0dp"
-                card_view:cardCornerRadius="1dp"
-                >
+                card_view:cardCornerRadius="1dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.4"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/cardviewbackground1" />
 
                 <LinearLayout
                     android:id="@+id/ExerciseButtonAndText"
@@ -100,11 +118,18 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/MeditationCardView"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:backgroundTint="#4D131e72"
                 app:cardElevation="0dp"
                 app:cardMaxElevation="0dp"
                 card_view:cardCornerRadius="1dp">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:alpha="0.4"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/cardviewbackground1" />
 
                 <LinearLayout
                     android:id="@+id/MeditationButtonAndText"
@@ -131,9 +156,10 @@
             </android.support.v7.widget.CardView>
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="115dp"
             android:layout_marginBottom="50dp"
             android:layout_marginTop="50dp"
             android:gravity="center"
@@ -142,12 +168,19 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/StretchesCardView"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="100dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="50dp"
                 android:backgroundTint="#4D131e72"
                 app:cardElevation="0dp"
                 app:cardMaxElevation="0dp"
                 card_view:cardCornerRadius="1dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.4"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/cardviewbackground1" />
 
                 <LinearLayout
                     android:id="@+id/StretchesButtonAndText"
@@ -176,11 +209,18 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/TaskCardView"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:backgroundTint="#4D131e72"
                 app:cardElevation="0dp"
                 app:cardMaxElevation="0dp"
                 card_view:cardCornerRadius="1dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.4"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/cardviewbackground1" />
 
                 <LinearLayout
                     android:id="@+id/TaskButtonAndText"
@@ -207,23 +247,29 @@
             </android.support.v7.widget.CardView>
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="115dp"
             android:gravity="center"
             android:orientation="horizontal">
 
             <android.support.v7.widget.CardView
                 android:id="@+id/RewardCardView"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="100dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="50dp"
                 android:backgroundTint="#4D131e72"
                 app:cardElevation="0dp"
                 app:cardMaxElevation="0dp"
-                card_view:cardCornerRadius="1dp"
-                tools:layout_editor_absoluteX="82dp"
-                tools:layout_editor_absoluteY="16dp">
+                card_view:cardCornerRadius="1dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.4"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/cardviewbackground1" />
 
                 <LinearLayout
                     android:id="@+id/RewardButtonAndText"
@@ -252,11 +298,18 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/JournalCardView"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:backgroundTint="#4D131e72"
                 app:cardElevation="0dp"
                 app:cardMaxElevation="0dp"
                 card_view:cardCornerRadius="1dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.4"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/cardviewbackground1" />
 
                 <LinearLayout
                     android:id="@+id/JournalButtonAndText"
@@ -283,34 +336,6 @@
             </android.support.v7.widget.CardView>
         </LinearLayout>
     </LinearLayout>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     <!--
