--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -15,7 +15,7 @@
         android:layout_height="150dp"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="50dp"
         android:backgroundTint="#8C131e72"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,52 +32,44 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center|start"
             android:layout_marginStart="10dp"
+            android:gravity="center|start"
             android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/DailyTaskOneString"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Exercise: "
-                    android:textColor="@android:color/black"
-                    android:textSize="20dp"/>
+            <TextView
+                android:id="@+id/DailyTaskOneString"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Exercise: "
+                android:textColor="@android:color/black"
+                android:textSize="20dp" />
 
-                <TextView
-                    android:id="@+id/DailyTaskOne"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Walk and Jog"
-                    android:textColor="@android:color/black"
-                    android:textSize="20dp"
-                    android:layout_marginBottom="20dp"/>
+            <TextView
+                android:id="@+id/DailyTaskOne"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:text="Walk and Jog"
+                android:textColor="@android:color/black"
+                android:textSize="20dp" />
 
-                <TextView
-                    android:id="@+id/DailyTaskTwoString"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Meditation: "
-                    android:textColor="@android:color/black"
-                    android:textSize="20dp"/>
+            <TextView
+                android:id="@+id/DailyTaskTwoString"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Meditation: "
+                android:textColor="@android:color/black"
+                android:textSize="20dp" />
 
-                <TextView
-                    android:id="@+id/DailyTaskTwo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Deep Breathing and Body Scan"
-                    android:textColor="@android:color/black"
-                    android:textSize="20dp"/>
+            <TextView
+                android:id="@+id/DailyTaskTwo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Deep Breathing and Body Scan"
+                android:textColor="@android:color/black"
+                android:textSize="20dp" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
-
-
-
-
-
-
-
-
 
 
     <android.support.v7.widget.CardView
@@ -86,11 +78,11 @@
         android:layout_height="100dp"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="50dp"
         android:backgroundTint="#8C131e72"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/cardView"
+        app:layout_constraintTop_toBottomOf="@id/cardView"
         card_view:cardCornerRadius="1dp">
 
 
@@ -186,15 +178,62 @@
     </android.support.v7.widget.CardView>
 
 
-    <ImageButton
-        android:id="@+id/GetNewTasks"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:scaleType="fitXY"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+    <!--
+    <android.support.v7.widget.CardView
+        android:id="@+id/DailyTaskCardView"
+        android:layout_width="110dp"
+        android:layout_height="150dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="#4D131e72"
+        app:cardElevation="0dp"
+        app:cardMaxElevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/red_button" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView2"
+        card_view:cardCornerRadius="1dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.4"
+            android:scaleType="fitXY"
+            android:src="@drawable/cardviewbackground1" />
+
+        <LinearLayout
+            android:id="@+id/DailyTaskButtonAndText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/GetNewTasks"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="8dp"
+                android:onClick="onClickGetNewTasks"
+                android:scaleType="fitXY"
+                android:src="@drawable/new_day"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="parent"
+                app:layout_constraintVertical_bias="1.0" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Todays Daily Tasks"
+                android:textSize="15dp" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+    -->
 
 
 
