--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -8,7 +8,6 @@
     android:background="@drawable/app_background_image"
     tools:context="com.example.rossg_000.fyp_v3.Tasks">
 
-
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
@@ -40,7 +39,7 @@
                 android:id="@+id/DailyTaskOneString"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Exercise: "
+                android:text="Daily Exercises:"
                 android:textColor="@android:color/black"
                 android:textSize="20dp" />
 
@@ -57,7 +56,7 @@
                 android:id="@+id/DailyTaskTwoString"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Meditation: "
+                android:text="Daily Meditation:"
                 android:textColor="@android:color/black"
                 android:textSize="20dp" />
 
@@ -70,7 +69,6 @@
                 android:textSize="20dp" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
-
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView2"
@@ -85,7 +83,6 @@
         app:layout_constraintTop_toBottomOf="@id/cardView"
         card_view:cardCornerRadius="1dp">
 
-
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -94,27 +91,48 @@
             android:src="@drawable/cardviewbackground1" />
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center|start"
+            android:layout_marginStart="10dp">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center|start"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/CompletedTasksString"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="92dp"
-                    android:layout_marginStart="10dp"
                     android:text="Tasks Completed:"
                     android:textColor="@android:color/black"
                     android:textSize="20dp" />
+
+                <TextView
+                    android:id="@+id/ExercisesCompletedString"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Exercises Completed:"
+                    android:textColor="@android:color/black"
+                    android:textSize="20dp" />
+
+                <TextView
+                    android:id="@+id/MeditationsCompletedString"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Meditations Completed:"
+                    android:textColor="@android:color/black"
+                    android:textSize="20dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginStart="50dp"
+                >
 
                 <TextView
                     android:id="@+id/CompletedTasks"
@@ -123,46 +141,12 @@
                     android:text="0"
                     android:textColor="@android:color/black"
                     android:textSize="20dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center|start"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/ExercisesCompletedString"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="61dp"
-                    android:layout_marginStart="10dp"
-                    android:text="Exercises Completed:"
-                    android:textColor="@android:color/black"
-                    android:textSize="20dp" />
 
                 <TextView
                     android:id="@+id/ExercisesCompleted"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="0"
-                    android:textColor="@android:color/black"
-                    android:textSize="20dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center|start"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/MeditationsCompletedString"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="40dp"
-                    android:layout_marginStart="10dp"
-                    android:text="Meditations Completed:"
                     android:textColor="@android:color/black"
                     android:textSize="20dp" />
 
@@ -176,247 +160,4 @@
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
-
-
-    <!--
-    <android.support.v7.widget.CardView
-        android:id="@+id/DailyTaskCardView"
-        android:layout_width="110dp"
-        android:layout_height="150dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        android:backgroundTint="#4D131e72"
-        app:cardElevation="0dp"
-        app:cardMaxElevation="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2"
-        card_view:cardCornerRadius="1dp">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:alpha="0.4"
-            android:scaleType="fitXY"
-            android:src="@drawable/cardviewbackground1" />
-
-        <LinearLayout
-            android:id="@+id/DailyTaskButtonAndText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageButton
-                android:id="@+id/GetNewTasks"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginTop="8dp"
-                android:onClick="onClickGetNewTasks"
-                android:scaleType="fitXY"
-                android:src="@drawable/new_day"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Todays Daily Tasks"
-                android:textSize="15dp" />
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-
-    -->
-
-
-
-    <!--
-    <LinearLayout
-        android:id="@+id/TaskLinearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/TaskCardView2"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="150dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            app:cardElevation="0dp"
-            app:cardMaxElevation="0dp"
-            card_view:cardCornerRadius="1dp">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY"
-                android:src="@drawable/cardviewbackground1"
-                app:layout_constraintBottom_toBottomOf="@id/TaskCardView2"
-                app:layout_constraintEnd_toEndOf="@id/TaskCardView2"
-                app:layout_constraintStart_toStartOf="@id/TaskCardView2"
-                app:layout_constraintTop_toTopOf="@id/TaskCardView2" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-
-                <LinearLayout
-                    android:id="@+id/linearLayout4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/ExercisesCompletedString"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="10dp"
-                        android:text="Exercise"
-                        android:textColor="@android:color/black"
-                        android:textSize="20dp" />
-
-                    <TextView
-                        android:id="@+id/ExercisesCompleted"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="0"
-                        android:textColor="@android:color/black"
-                        android:textSize="20dp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/linearLayout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="50dp"
-                    android:layout_marginStart="50dp"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    app:layout_constraintVertical_bias="0.0">
-
-                    <TextView
-                        android:id="@+id/CompletedTasksString"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="10dp"
-                        android:text="Tasks"
-                        android:textColor="@android:color/black"
-                        android:textSize="20dp"
-                        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-                    <TextView
-                        android:id="@+id/CompletedTasks"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="0"
-                        android:textColor="@android:color/black"
-                        android:textSize="20dp"
-                        app:layout_constraintTop_toBottomOf="@+id/CompletedTasksString" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/linearLayout3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/MeditationsCompletedString"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="10dp"
-                        android:text="Meditation"
-                        android:textColor="@android:color/black"
-                        android:textSize="20dp" />
-
-                    <TextView
-                        android:id="@+id/MeditationsCompleted"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="0"
-                        android:textColor="@android:color/black"
-                        android:textSize="20dp" />
-                </LinearLayout>
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/TaskCardView1"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            app:cardElevation="0dp"
-            app:cardMaxElevation="0dp"
-            card_view:cardCornerRadius="1dp">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY"
-                android:src="@drawable/cardviewbackground1"
-                app:layout_constraintBottom_toBottomOf="@id/TaskCardView1"
-                app:layout_constraintEnd_toEndOf="@id/TaskCardView1"
-                app:layout_constraintStart_toStartOf="@id/TaskCardView1"
-                app:layout_constraintTop_toTopOf="@id/TaskCardView1" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:orientation="horizontal"
-                app:layout_constraintBottom_toBottomOf="@id/TaskCardView1"
-                app:layout_constraintEnd_toEndOf="@id/TaskCardView1"
-                app:layout_constraintStart_toStartOf="@id/TaskCardView1"
-                app:layout_constraintTop_toTopOf="@id/TaskCardView1">
-
-
-                <ImageButton
-                    android:id="@+id/toExerciseButton"
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:layout_gravity="center"
-                    android:onClick="goToExercise"
-                    android:src="@drawable/sit_ups" />
-
-                <ImageButton
-                    android:id="@+id/toStretchesButton"
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="35dp"
-                    android:layout_marginRight="35dp"
-                    android:onClick="goToStretches"
-                    android:src="@drawable/stretch" />
-
-                <ImageButton
-                    android:id="@+id/toMeditationButton"
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:layout_gravity="center"
-                    android:onClick="goToMeditation"
-                    android:src="@drawable/floating_guru" />
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-
-    </LinearLayout>
-    -->
 </android.support.constraint.ConstraintLayout>
